pre-release tweaks #4: new shirt pages

--- a/shirt3.html
+++ b/shirt3.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="flex.css">
-    <title>customize</title>
+    <title>blue-shirt</title>
 </head>
 <body>
 
@@ -72,8 +72,8 @@
 
     
     <article class="customize_image">
-      <img src="merch image/T-shirts_trion_merch - Copy.png">
-      <h1>Black Top Right</h1>
+      <img src="merch image/blue shirt.png">
+      <h1>Blue Top Right</h1>
       <h2>$30</h2>
       <p>description:</p>
       <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eligendi perspiciatis fugit expedita maxime voluptates non nemo accusamus aut quae recusandae iste provident nisi, saepe ullam voluptas maiores! Excepturi, animi debitis?</p>
