--- a/shirt9.html
+++ b/shirt9.html
@@ -72,8 +72,8 @@
 
     
     <article class="customize_image">
-      <img src="merch image/big logo black shirt.png">
-      <h1>Big Logo Black Shirtt</h1>
+      <img src="merch image/big logo white shirt.png">
+      <h1>Big Logo White Shirt</h1>
       <h2>$30</h2>
       <p>description:</p>
       <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eligendi perspiciatis fugit expedita maxime voluptates non nemo accusamus aut quae recusandae iste provident nisi, saepe ullam voluptas maiores! Excepturi, animi debitis?</p>
