update about us starter text align to center

--- a/about-us.html
+++ b/about-us.html
@@ -61,50 +61,50 @@
     <article>
       <h2>Accelerate into the future with Trion's Electric Power</h2>
       <img class="about-us_image" src="trion_homepage_images/trion chief operating officer.png" alt="staff">
-      <p>Brent Johnson</p>
-      <p>Chief Operating Officer</p>
+      <p style="text-align: center;">Brent Johnson</p>
+      <p style="text-align: center;">Chief Operating Officer</p>
     </article>
   
     <article>
       <img class="about-us_image" src="trion_homepage_images/Nancy Patterson.png" alt="staff">
-      <p>Nancy Patterson</p>
-      <p>CEA - Chief Executive Assistant</p>
+      <p style="text-align: center;">Nancy Patterson</p>
+      <p style="text-align: center;">CEA - Chief Executive Assistant</p>
     </article>
 
     <article>
       <img class="about-us_image" src="trion_homepage_images/quinton dodson vp of special vehicle operation.png" alt="staff">
-      <p>Quinton Dodson</p>
-      <p>VP of Special Vehicle Operations</p>
+      <p style="text-align: center;">Quinton Dodson</p>
+      <p style="text-align: center;">VP of Special Vehicle Operations</p>
     </article>
 
     <article>
       <img class="about-us_image" src="trion_homepage_images/kie fair trion ppl.png" alt="staff">
-      <p>Kie Fair</p>
-      <p>VP of Sales / Dealer Coordination</p>
+      <p style="text-align: center;">Kie Fair</p>
+      <p style="text-align: center;">VP of Sales / Dealer Coordination</p>
     </article>
 
     <article>
       <img class="about-us_image" src="trion_homepage_images/romeo miller.png" alt="staff">
-      <p>Romeo Miller</p>
-      <p>Chief Brand Ambassador</p>
+      <p style="text-align: center;">Romeo Miller</p>
+      <p style="text-align: center;">Chief Brand Ambassador</p>
     </article>
 
     <article>
       <img class="about-us_image" src="trion_homepage_images/warren hollier.png" alt="staff">
-      <p>Warren Hollier</p>
-      <p>Director of Special Programs</p>
+      <p style="text-align: center;">Warren Hollier</p>
+      <p style="text-align: center;">Director of Special Programs</p>
     </article>
 
     <article>
       <img class="about-us_image" src="trion_homepage_images/peter dwars.png" alt="staff">
-      <p>Peter Dwars</p>
-      <p>CCO, Compliance Officer</p>
+      <p style="text-align: center;">Peter Dwars</p>
+      <p style="text-align: center;">CCO, Compliance Officer</p>
     </article>
 
     <article>
       <img class="about-us_image" src="trion_homepage_images/demarcus nelson.png" alt="staff">
-      <p>DeMarcus Nelson</p>
-      <p>VP of Business Development</p>
+      <p style="text-align: center;">DeMarcus Nelson</p>
+      <p style="text-align: center;">VP of Business Development</p>
     </article>
 
 
