--- a/account_home.html
+++ b/account_home.html
@@ -93,13 +93,13 @@
 </style>
   
   <style>
-    .home_button {
+    /* .home_button {
       width: 55px;
     }
 
     .hamburger-link img {
       width: 60px;
-    }
+    } */
 
     /* Account Page */
     .account-info {
