rewrite of former error ("type" error)

--- a/nem_hubcap1.html
+++ b/nem_hubcap1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link type="css" rel="stylesheet" href="flex.css">
+<link rel="stylesheet" href="flex.css">
     <title>nemesis_hubcap1</title>
 </head>
 <body class="background_for_config">
