--- a/black-widow_design_original.html
+++ b/black-widow_design_original.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link type="css" rel="stylesheet" href="flex.css">
+    <link rel="stylesheet" href="flex.css">
         <title>black-widow_design_original</title>
     </head>
     <body>
