--- a/customize.html
+++ b/customize.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link type="css" rel="stylesheet" href="flex.css">
+    <link rel="stylesheet" href="flex.css">
     <title>customize</title>
 </head>
 <body>
@@ -47,7 +47,6 @@
         }
 
         .dropdown_size {
-        position: center;
         right: 0;
         width: fit-content;
         }
