--- a/interior-nemesis2.html
+++ b/interior-nemesis2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link type="css" rel="stylesheet" href="flex.css">
+<link rel="stylesheet" href="flex.css">
     <title>nemesis-red-interior</title>
 </head>
 <header>
