Pre-release tweaks #8: Final commit for now

--- a/account_config_history.html
+++ b/account_config_history.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <nav role="navigation">
+    <nav>
       <ul>
         <li><a href="index.html"><img src="trion_homepage_images/Trion_logo.png" class="home_button" width="100"
               alt="aeradsf"></a></li>
@@ -41,9 +41,10 @@
     </section>
     <section class="footer_content">
       <p>CONTACT</p>
-      <p>INSERT EMAIL HERE:</p>
-      <p>________________________</p>
-      <p>Call us: #123-456-7890</p>
+      <p>EMAIL:</p>
+      <p>jack.chou24@student.cart.org;</p>
+      <p>lukas.dekan24@student.cart.org;</p>
+      <p>Call us: 559.248.7400</p>
     </section>
      <section class="footer_buttons">     
       <a href="models.html">MODELS</a>
@@ -54,101 +55,95 @@
   <article class="footer_extra">
     <p>Created by Lukas and Jack; November 2024</p>
   </article>
-
-
-
-
-
-  <style>
-    footer{
-       margin-top: auto;
-    }
-
-    body{
-        min-height: 100vh;
-        display: grid;
-        grid-template-rows: 1fr auto;
-    }
-  </style>
-
-  <style>
-    .home_button {
-      width: 55px;
-    }
-
-    .hamburger-link img {
-      width: 60px;
-    }
-
-    /* Account Page */
-    .account-info {
-      text-align: center;
-      padding: 50px 20px;
-    }
-
-    .account-info h1 {
-      font-size: 32px;
-      margin-bottom: 20px;
-    }
-
-    .account-info p {
-      font-size: 18px;
-      margin-bottom: 30px;
-    }
-
-    .account-details {
-      display: flex;
-      justify-content: center;
-      gap: 30px;
-      margin-bottom: 40px;
-    }
-
-    .account-detail {
-      background-color: #fff;
-      padding: 20px;
-      border-radius: 8px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-      width: 30%;
-    }
-
-    .account-detail h3 {
-      font-size: 18px;
-      margin-bottom: 10px;
-      color: #555;
-    }
-
-    .account-detail p {
-      font-size: 16px;
-      color: #777;
-    }
-
-    .account-actions {
-      margin-top: 40px;
-    }
-
-    .account-actions h2 {
-      font-size: 24px;
-      margin-bottom: 20px;
-    }
-
-    .cta-button {
-      background-color: #f39c12;
-      color: #fff;
-      padding: 12px 25px;
-      text-decoration: none;
-      border-radius: 5px;
-      margin: 10px;
-      font-size: 16px;
-      display: inline-block;
-    }
-
-    .cta-button:hover {
-      background-color: #e67e22;
-    }
-    
-
-  </style>
-
-
 </body>
+<style>
+  footer{
+     margin-top: auto;
+  }
+
+  body{
+      min-height: 100vh;
+      display: grid;
+      grid-template-rows: 1fr auto;
+  }
+</style>
+
+<style>
+  .home_button {
+    width: 55px;
+  }
+
+  .hamburger-link img {
+    width: 60px;
+  }
+
+  /* Account Page */
+  .account-info {
+    text-align: center;
+    padding: 50px 20px;
+  }
+
+  .account-info h1 {
+    font-size: 32px;
+    margin-bottom: 20px;
+  }
+
+  .account-info p {
+    font-size: 18px;
+    margin-bottom: 30px;
+  }
+
+  .account-details {
+    display: flex;
+    justify-content: center;
+    gap: 30px;
+    margin-bottom: 40px;
+  }
+
+  .account-detail {
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    width: 30%;
+  }
+
+  .account-detail h3 {
+    font-size: 18px;
+    margin-bottom: 10px;
+    color: #555;
+  }
+
+  .account-detail p {
+    font-size: 16px;
+    color: #777;
+  }
+
+  .account-actions {
+    margin-top: 40px;
+  }
+
+  .account-actions h2 {
+    font-size: 24px;
+    margin-bottom: 20px;
+  }
+
+  .cta-button {
+    background-color: #f39c12;
+    color: #fff;
+    padding: 12px 25px;
+    text-decoration: none;
+    border-radius: 5px;
+    margin: 10px;
+    font-size: 16px;
+    display: inline-block;
+  }
+
+  .cta-button:hover {
+    background-color: #e67e22;
+  }
+  
+
+</style>
+
 </html>
