--- a/models.html
+++ b/models.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <nav role="navigation">
+    <nav>
       <ul>
         <li><li><a href="index.html"><img src="trion_homepage_images/Trion_logo.png" class="home_button" width="100"
               alt="aeradsf"></a></li>
@@ -69,9 +69,10 @@
             </section>
             <section class="footer_content">
               <p>CONTACT</p>
-              <p>INSERT EMAIL HERE:</p>
-              <p>________________________</p>
-              <p>Call us: #123-456-7890</p>
+      <p>EMAIL:</p>
+      <p>jack.chou24@student.cart.org;</p>
+      <p>lukas.dekan24@student.cart.org;</p>
+      <p>Call us: 559.248.7400</p>
             </section>
             <article class="footer_buttons">
               <a href="models.html">MODELS</a>
