--- a/black-widow_design-special_race.html
+++ b/black-widow_design-special_race.html
@@ -29,7 +29,7 @@
         </nav>
       </header>
         <article  class="config_option-controller">
-          <img class="hubcap-image" src="/trion_homepage_images/racing_blk-widow.avif" alt="config">
+          <img class="hubcap-image" src="/trion_homepage_images/black-widow_design_special-race.jpg" alt="config">
            <div class="config_options-special">
                 <a href="black-widow_design_original.html">ORIGINAL</a>
                 <a href="black-widow_design_streetkit.html">STREET KIT</a>        
