--- a/config-black_widow.html
+++ b/config-black_widow.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="flex.css">
-    <title>config-nemesis</title>
+    <title>config-black-widow</title>
 </head>
 <header>
   <nav>
